Adds bottom margin to logos

--- a/sites/all/themes/infine/scss/helpers/_partners.scss
+++ b/sites/all/themes/infine/scss/helpers/_partners.scss
@@ -6,6 +6,7 @@
     		/* opacity:0.3; */ 
     		text-align: center;
     		border: 1px solid #ddd;
+    		margin-bottom: 20px;
       		&:hover { /* opacity:0.8;  */}
     }
   }
